# VegaHW

./: .gitignore  CMakeLists.txt  Doxyfile  benchmark_add.cpp  test_add.cpp
.github/workflows/: test.yaml
include/: my_add.hpp
src/: my_add.cpp
